--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ go:
 before_install:
   - go get github.com/mattn/goveralls
   - go get github.com/rexray/gocsi/csc
+  - sudo cp test/integration/blobfuse /usr/bin/
 
 script:
   - hack/verify-all.sh
